--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iitsliiz.github.io/React-Rest",
+  "homepage": "https://iitsliiz.github.io/React-Rest/",
   "name": "restaurants",
   "version": "0.1.0",
   "private": true,
